--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body></body>
   <script type="text/javascript">
-    document.location = "werne2j.github.io/resume.pdf"
+    document.location = "resume.pdf"
   </script>
 </html>
