--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+      <title>Jake Wernette - Full Stack and Mobile Software Engineer</title>
+  </head>
+
   <body></body>
   <script type="text/javascript">
     document.location = "resume.pdf"
